# sendmail-test

./: .gitignore  Cargo.toml  README.md  compile_all.sh
src/: cli.rs  constants.rs  main.rs
