[package]
name = "sendmail-test"
version = "0.0.1"
authors = ["Marirs <marirs@gmail.com>"]
description = "send test email to check smtp servers"
edition = "2021"

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
lettre = { version = "0.11.6", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"] }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_ses = { version = "0.48.0", default-features = false, features = ["rustls"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "sendmail-test"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = "all"
opt-level = 3